:memo: Change swagger route patch abrigo
